libempathy-gtk: Fix several memory leaks from libgee

libgee’s GeeIterator returns a new reference from most of its methods,
especially gee_iterable_iterator() and gee_iterator_get(). Add corresponding
g_object_unref() calls.

https://bugzilla.gnome.org/show_bug.cgi?id=710453